--- a/src/layouts/style.module.less
+++ b/src/layouts/style.module.less
@@ -1,6 +1,6 @@
 .page-layout {
 	min-height: 100vh;
-	background: #ffffff;
+	background: #fff;
 }
 
 .page-header {
@@ -29,10 +29,10 @@
 	padding-top: 24px;
 }
 
-.pageContentWithHeader {
+.page-content-with-header {
 	padding-top: 8px;
 }
 
-.pageFooter {
+.page-footer {
 	background-color: #f7f7f7;
 }
